sapphire blocks and items have been added

--- a/src/main/resources/assets/iaconicsmod/models/item/sapphire_item.json
+++ b/src/main/resources/assets/iaconicsmod/models/item/sapphire_item.json
@@ -1,6 +1,6 @@
 {
   "parent": "minecraft:item/generated",
   "textures": {
-    "layer0": "iaconicsmod:item/newitem"
+    "layer0": "iaconicsmod:item/sapphire_item"
   }
 }
